plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.sopt.pawkey'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    queryDslVersion = "6.10.1"
}


dependencies {
    // spring-boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // lombok
    implementation 'org.postgresql:postgresql:42.7.3'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // dev
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'com.h2database:h2'

    // query-dsl
    implementation "io.github.openfeign.querydsl:querydsl-core:${queryDslVersion}"
    implementation "io.github.openfeign.querydsl:querydsl-jpa:${queryDslVersion}"
    annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${queryDslVersion}:jpa"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    implementation 'com.h2database:h2'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Hibernate Spatial (PostGIS)
    implementation 'org.hibernate.orm:hibernate-spatial:6.5.2.Final' // spring-boot 3.5.x에서 호환되는 최신 버전 사용
    // QueryDSL Spatial (jakarta 패키지 사용)
    implementation 'com.querydsl:querydsl-spatial:5.1.0'
    annotationProcessor 'com.querydsl:querydsl-spatial:5.1.0'

    // JTS Geometry
    implementation 'org.locationtech.jts:jts-core:1.19.0'
    implementation 'org.n52.jackson:jackson-datatype-jts:1.2.10'
}

def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile;

tasks.withType(JavaCompile) {
    options.generatedSourceOutputDirectory = file(querydslDir)
}

tasks.named("clean") {
    doLast {
        delete file(querydslDir)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
